名刺登録機能 エピソード登録機能を仮設定
topからもアクセスできるようになっていますが、見た目はまだです。

ブラウザカメラで撮影し、名刺を登録、撮影して検索できる状態です。

--- a/app/views/cards/top.html.erb
+++ b/app/views/cards/top.html.erb
@@ -1,1 +1,4 @@
 TOP
+<%= link_to 'あなたの名刺を一覧表示する', "/cards", method: :get %>
+<%= link_to '名刺を新たに登録する', "/newcamera", method: :get %>
+<%= link_to '名刺を検索する', "/searchcamera", method: :get %>
