個人の名刺の一覧、新規、検索、名刺へのエピソード記入のビュー作成
個人用としての機能と見た目を作成しました

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,14 @@
 @import "reset";
+@import "config/variable";
+@import "config/linkConfig";
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
+@import "modules/devise";
+@import "modules/card_top";
+@import "modules/card_index";
 @import "modules/card_show";
-@import "modules/card_newcamera";
-@import "modules/card_searchcamera";
+@import "modules/card_searchnormalform";
+@import "modules/episode_show";
+@import "modules/card_newcamerasearchcamera";
+@import "modules/partial_header";
+@import "modules/partial_footer";
