ユーザがグループに所属できるよう設定

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,5 +10,6 @@
 @import "modules/card_searchnormalform";
 @import "modules/episode_show";
 @import "modules/card_newcamerasearchcamera";
+@import "modules/group_new";
 @import "modules/partial_header";
 @import "modules/partial_footer";
